# lem

./: CMakeLists.txt  Lem-in  Makefile  delete_me  test.txt  test1.txt
includes/: lem_in.h
libft/: ._Makefile  ._author  ._ft_atoi.c  ._ft_bzero.c  ._ft_color.c  ._ft_get_next_line.c  ._ft_isalnum.c  ._ft_isalpha.c  ._ft_isascii.c  ._ft_isdigit.c  ._ft_isprint.c  ._ft_itoa.c  ._ft_itoa_base.c  ._ft_itoa_ll.c  ._ft_lstadd.c  ._ft_lstdel.c  ._ft_lstdelone.c  ._ft_lstiter.c  ._ft_lstmap.c  ._ft_lstnew.c  ._ft_memalloc.c  ._ft_memccpy.c  ._ft_memchr.c  ._ft_memcmp.c  ._ft_memcpy.c  ._ft_memdel.c  ._ft_memmove.c  ._ft_memset.c  ._ft_padding.c  ._ft_padding_str.c  ._ft_printf.c  ._ft_printf.h  ._ft_put_uintmax.c  ._ft_putchar.c  ._ft_putchar_fd.c  ._ft_putendl.c  ._ft_putendl_fd.c  ._ft_putnbr.c  ._ft_putnbr_fd.c  ._ft_putnstr.c  (+47 more)
src/: ft_build_new_way.c  ft_calc_optimal_way.c  ft_create.c  ft_delete_lemin_things.c  ft_lem_in.c  ft_print_result.c  ft_read.c  ft_realloc_lemin.c  ft_validation.c  permutation.c  some_calc.c  test.txt  test1.txt
